Refactored for greater encapsulation