@@ -19,24 +19,27 @@ class ComputerTest {
     public void shouldInstallGames() {
         PowerSupply myPsu = new PowerSupply();
         Computer myPc = new Computer(myPsu);
+        Game game = new Game("Final Fantasy XI");
 
-        myPc.installGame("Final Fantasy XI");
+        myPc.installGame(game);
 
-        Assertions.assertEquals(1, myPc.installedGames.size());
-        Assertions.assertEquals("Final Fantasy XI", myPc.installedGames.get(0).name);
+        Assertions.assertEquals(1, myPc.getInstalledGames().size());
+        Assertions.assertEquals("Final Fantasy XI", myPc.getInstalledGames().getFirst().getName());
     }
 
     @Test
     public void shouldPlayGames() {
         PowerSupply myPsu = new PowerSupply();
         Computer myPc = new Computer(myPsu);
+        Game game1 = new Game("Duck Game");
+        Game game2 = new Game("Dragon's Dogma: Dark Arisen");
 
-        myPc.installGame("Duck Game");
-        myPc.installGame("Dragon's Dogma: Dark Arisen");
+        myPc.installGame(game1);
+        myPc.installGame(game2);
 
-        Assertions.assertEquals("Playing Duck Game", myPc.playGame("Duck Game"));
-        Assertions.assertEquals("Playing Dragon's Dogma: Dark Arisen", myPc.playGame("Dragon's Dogma: Dark Arisen"));
-        Assertions.assertEquals("Game not installed", myPc.playGame("Morrowind"));
+        Assertions.assertEquals("Playing Duck Game", myPc.playGame(game1));
+        Assertions.assertEquals("Playing Dragon's Dogma: Dark Arisen", myPc.playGame(game2));
+        Assertions.assertEquals("Game not installed", myPc.playGame(new Game("Morrowind")));
     }
 
     @Test
@@ -49,8 +52,8 @@ class ComputerTest {
 
         Computer myPc = new Computer(myPsu, preInstalled);
 
-        Assertions.assertEquals(2, myPc.installedGames.size());
-        Assertions.assertEquals("Dwarf Fortress", myPc.installedGames.get(0).name);
-        Assertions.assertEquals("Baldur's Gate", myPc.installedGames.get(1).name);
+        Assertions.assertEquals(2, myPc.getInstalledGames().size());
+        Assertions.assertEquals("Dwarf Fortress", myPc.getInstalledGames().get(0).getName());
+        Assertions.assertEquals("Baldur's Gate", myPc.getInstalledGames().get(1).getName());
     }
 }
